# ia-postsdiegostyle

./: .env  requirements.txt
linkedin_crew/: README.md  pyproject.toml
linkedin_crew/src/linkedin_crew/: crew.py  main.py
outputs/: post_2025-04-21_18-15.txt  post_2025-04-21_18-20.txt  post_2025-04-21_18-23.txt  post_2025-04-21_18-33.txt  post_2025-04-21_18-37.txt  post_2025-04-21_18-42.txt  post_2025-04-21_18-52.txt  post_2025-04-21_18-59.txt  post_2025-04-21_19-00.txt  post_2025-04-21_19-18.txt  post_2025-04-22_07-21.txt  post_2025-04-22_07-26.txt  post_2025-04-22_07-44.txt  post_2025-04-22_08-16.txt  post_2025-04-23_06-57.txt  post_2025-04-23_07-13.txt  post_2025-04-23_07-20.txt  post_2025-04-23_09-54.txt
src/linkedin_crew/: app.py  app_gradio.py  crew.py  main.py
src/linkedin_crew/config/: agents.yaml  tasks.yaml
